--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "homepage": "https://mark-huynh.github.io/kigaruweb/",
   "dependencies": {
+    "@material-ui/core": "^4.3.0",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
