--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://mark-huynh.github.io/kigaruweb/",
   "dependencies": {
     "@material-ui/core": "^4.3.0",
+    "@material-ui/styles": "^4.3.0",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
