--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-html-parser": "^2.0.2",
     "react-pose": "^4.0.8",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^2.1.8",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "firebase": "^8.3.2",
+    "flamelink": "^1.0.0-alpha.34"
   },
   "scripts": {
     "start": "react-scripts start",
